--- a/SoftwareTraining.csproj
+++ b/SoftwareTraining.csproj
@@ -23,10 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="EnvironmentManager\appsettings.development.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="EnvironmentManager\appsettings.production.json">
+    <None Update="EnvironmentManager\appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
