--- a/EnvironmentManager/appsettings.json
+++ b/EnvironmentManager/appsettings.json
@@ -1,8 +1,8 @@
 {
   "SoftwareTraining": {
-    "mysqlIp": "165.227.154.43",
-    "mysqlPort": "4580",
-    "mysqlPass": "B.12345!",
-    "database": "softwaretraining"
+    "mysqlIp": "",
+    "mysqlPort": "",
+    "mysqlPass": "",
+    "database": ""
   }
 }
